align Avoided asset losses

--- a/src/styles.css
+++ b/src/styles.css
@@ -441,6 +441,7 @@ template {
    padding-right: 5px;
  }
  .box-icon-c{
+   padding-left: 18px;
    padding-right: 5px;
    /*color:#f3a277;*/
    color: #C3D700;
